<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kalkulator</string>
    <string name="action_settings">Settings</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>
    <string name="nol">0</string>
    <string name="clear">C</string>
    <string name="sama_dengan">=</string>
    <string name="kali">x</string>
    <string name="bagi">/</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>

</resources>
