<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:textAlignment="viewEnd" >

    </EditText>

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button2"
        android:textSize="20sp"
        android:text="@string/empat" />

    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/button5"
        android:textSize="20sp"
        android:text="@string/tujuh" />

    <Button
        android:id="@+id/button8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5"
        android:layout_below="@+id/button5"
        android:textSize="20sp"
        android:text="@string/delapan" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/text1"
        android:layout_alignTop="@+id/button1"
        android:textSize="20sp"
        android:text="@string/tiga" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:textSize="20sp"
        android:text="@string/enam" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignLeft="@+id/button6"
        android:textSize="20sp"
        android:text="@string/sembilan" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_toLeftOf="@+id/button6"
        android:textSize="20sp"
        android:text="@string/lima" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:layout_toLeftOf="@+id/button3"
        android:textSize="20sp"
        android:text="@string/dua" />

    <Button
        android:id="@+id/button1"
        style="@style/AppBaseTheme"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/button2"
        android:textSize="20sp"
        android:text="@string/satu" />

    <Button
        android:id="@+id/button10"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_toLeftOf="@+id/button8"
        android:textSize="20sp"
        android:text="@string/nol" />

    <Button
        android:id="@+id/button11"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button10"
        android:layout_alignBottom="@+id/button10"
        android:layout_toLeftOf="@+id/button9"
        android:textSize="20sp"
        android:text="@string/clear" />

    <Button
        android:id="@+id/button12"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button9"
        android:layout_below="@+id/button9"
        android:textSize="20sp"
        android:text="@string/sama_dengan" />

    <Button
        android:id="@+id/button_kurang"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_bagi"
        android:layout_toLeftOf="@+id/button_kali"
        android:textSize="20sp"
        android:text="@string/kurang" />

    <Button
        android:id="@+id/button_kali"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button10"
        android:layout_marginTop="19dp"
        android:layout_toRightOf="@+id/button10"
        android:textSize="20sp"
        android:text="@string/kali" />

    <Button
        android:id="@+id/button_tambah"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_bagi"
        android:layout_alignLeft="@+id/button12"
        android:textSize="20sp"
        android:text="@string/tambah" />

    <Button
        android:id="@+id/button_bagi"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_kali"
        android:layout_toLeftOf="@+id/button_tambah"
        android:textSize="20sp"
        android:text="@string/bagi" />

</RelativeLayout>